--- a/index.html
+++ b/index.html
@@ -3,34 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Juego de Convenios Colectivos</title>
-    <!-- Enlace al archivo CSS para el diseño del juego -->
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Fuente externa -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenido al Juego de Convenios Colectivos</h1>
-        <p>Elige el convenio adecuado en función de la empresa y el puesto de trabajo.</p>
-        <button id="startButton">Comenzar</button>
+        <h1>Juego de Convenios Colectivos</h1>
+        <p id="instructions">Encuentra el convenio colectivo correcto según el puesto de trabajo.</p>
 
+        <!-- Pantalla del juego -->
         <div id="game" style="display:none;">
-            <div id="question-container">
-                <h2 id="company-info"></h2>
-                <p id="job-info"></p>
-                <div id="choices"></div>
-            </div>
-            <button id="nextButton" style="display:none;">Siguiente</button>
+            <div id="timer">Tiempo: <span id="time">30</span> segundos</div>
+            <h2 id="company-info"></h2>
+            <p id="job-info"></p>
+            <div id="choices"></div>
+            <div id="feedback" class="feedback"></div>
+            <button id="continueButton" style="display:none;">Continuar</button>
         </div>
 
+        <!-- Resultado final -->
         <div id="result" style="display:none;">
             <h2 id="final-result"></h2>
+            <p id="final-score"></p>
         </div>
+
+        <!-- Puntuación -->
+        <div id="scoreContainer" style="display:none;">
+            <p>Puntuación: <span id="score">0</span></p>
+        </div>
+
+        <!-- Botón de inicio -->
+        <button id="startButton">Comenzar</button>
     </div>
 
-    <!-- Enlace al archivo JavaScript para la lógica del juego -->
+    <!-- Script -->
     <script src="js/script.js"></script>
 </body>
 </html>
