--- a/index.html
+++ b/index.html
@@ -5,66 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Convenios Colectivos</title>
     <style>
-        /* Puedes añadir tu estilo aquí si lo deseas */
+        /* Puedes añadir tus estilos CSS aquí */
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        #game-container {
-            padding: 20px;
         }
         #choices button {
             display: block;
             margin: 10px auto;
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 10px;
             cursor: pointer;
         }
-        #result p {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-        #restartButton {
-            padding: 10px 20px;
-            font-size: 16px;
+        #result, #game, #scoreContainer {
+            display: none;
         }
     </style>
 </head>
 <body>
 
     <div id="game-container">
-        <!-- Botón para comenzar el juego -->
         <button id="startButton">Comenzar el Juego</button>
 
-        <!-- Contenedor del juego, inicialmente oculto -->
-        <div id="game" style="display: none;">
+        <div id="game">
             <div id="company-info"></div>
             <div id="job-info"></div>
             <div id="choices"></div>
             <div id="feedback"></div>
-            <button id="continueButton" style="display: none;">Continuar</button>
+            <button id="continueButton">Continuar</button>
         </div>
 
-        <!-- Contenedor de la puntuación -->
-        <div id="scoreContainer" style="display: none;">
+        <div id="scoreContainer">
             <p>Puntuación: <span id="score">0</span></p>
             <p>Tiempo restante: <span id="time">30</span> segundos</p>
         </div>
 
-        <!-- Resultados del juego, inicialmente ocultos -->
-        <div id="result" style="display: none;">
+        <div id="result">
             <p id="final-result"></p>
             <p id="final-score"></p>
-            <p id="final-time"></p> <!-- Mostrar tiempo total -->
-            <button id="restartButton" style="display: none;">Reiniciar</button>
+            <p id="final-time"></p>
+            <button id="restartButton">Reiniciar</button>
         </div>
     </div>
 
-    <!-- Referencia al archivo JavaScript -->
+    <!-- Archivo JavaScript externo -->
     <script src="script.js"></script>
 
 </body>
 </html>
-
